--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Main local styles -->
     <link rel="stylesheet" href="css/main.css">
 
-    <title>Jane E. Smith, PhD</title>
+    <title>Sohail A. Khan, PhD</title>
 
   </head>
 
@@ -101,10 +101,10 @@
 
         <div class="col-sm-8 px-4">
 
-          <h1>Jane Smith</h1>
+          <h1>Sohail Khan</h1>
 
-          <p class="position-title mt-2 mb-1">Title, School or Organization</p>
-          <p class="position-title mt-0 mb-4">Optional Second Title, School or Organization</p>
+          <p class="position-title mt-2 mb-1">PhD Candidate</p>
+          <p class="position-title mt-0 mb-4">SFI-MediaFutures, University of Bergen</p>
 
           <p>Jane Smith is the {{title}} for the {{organization}}. There she {{does things}}. She is particularly
             focused on {{various activities}}.</p>
@@ -151,20 +151,20 @@
 
           <ul id="education" class="list-group">
             <li class="list-group-item">
-              <p><strong>PhD, Field</strong><br>
-                <span class="university">James Trickington University</span>
+              <p><strong>PhD, Computational Visual Content Verification</strong><br>
+                <span class="university">University of Bergen, Norway</span>
               </p>
             </li>
             <li class="list-group-item">
-              <p><strong>MA, Field (Concentration)</strong><br>
-                <span class="university">James Trickington University</span>
+              <p><strong>MSc, Cybersecurity and Artificial Intelligence</strong><br>
+                <span class="university">University of Sheffield, United Kingdom</span>
               </p>
             </li>
-            <li class="list-group-item">
+            <!-- <li class="list-group-item">
               <p><strong>BA, Field (Majors)</strong><br>
                 <span class="university">James Trickington University</span>
               </p>
-            </li>
+            </li> -->
           </ul>
 
           <div class="alert alert-primary mt-4" role="alert">
