--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="manifest" href="img/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="img/favicons/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#fffff">
 
     <!-- jQuery UI css -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
@@ -63,7 +63,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="text-center">
-            <img id="my-photo" src="https://unsplash.it/500/500" class="rounded img-fluid shadow-sm" width="100%"
+            <img id="my-photo" src="img/sak1.jpg" class="rounded img-fluid shadow-sm" width="100%"
               alt="Image of Jane Smith">
           </div>
 
@@ -71,26 +71,26 @@
             <tbody>
               <tr class="d-flex">
                 <td class="col-2"><i class="fa fa-fw fa-lg fa-home"></i></td>
-                <td class="col-10">Building 123<br>
-                  James Trickington University<br>
-                  Anytown, CA 99999-1234<br>
-                  <span class="pointer"><a class="bright-blue" role="button" data-toggle="modal"
-                      data-target="#modal-map-to-office"><i class="fa fa-map-marker-alt mr-2"></i>Map</a></span>
+                <td class="col-10">SFI-MediaFutures,<br>
+                  Lars Hilles Gate 30,<br>
+                  Bergen, Norway<br>
+                  <!-- <span class="pointer"><a class="bright-blue" role="button" data-toggle="modal"
+                      data-target="#modal-map-to-office"><i class="fa fa-map-marker-alt mr-2"></i>Map</a></span> -->
                 </td>
               </tr>
-              <tr class="d-flex">
+              <!-- <tr class="d-flex">
                 <td class="col-2"><i class="fa fa-fw fa-lg fa-phone"></i></td>
                 <td class="col-10"><a href="tel:9991234567">(999) 123-4567</a></td>
-              </tr>
+              </tr> -->
+              
+
               <tr class="d-flex">
-                <td class="col-2"><i class="fa fa-lg fa-at"></i></td>
-                <td class="col-10"><a href="mailto:me@school.edu">me@school.edu</a></td>
+                <td class="col-3"><a class="text-dark" data-toggle='tooltip' data-offset="0 15" data-placement='top' title="Github" href="https://github.com/sohailahmedkhan" target="_blank"><i class="fab fa-github fa-2x"></i></a></td>
+                <td class="col-3"><a class="text-dark" data-toggle='tooltip' data-offset="0 15" data-placement='top' title="LinkedIn" href="https://www.linkedin.com/in/sohail-ahmed-khan-97794b175/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></td>
+                <td class="col-3"><a class="text-dark" data-toggle='tooltip' data-offset="0 15" data-placement='top' title="Google Scholar" href="https://scholar.google.com/citations?user=clIS5CsAAAAJ&hl=en" target="_blank"><i class="fab fa-google fa-2x"></i></a></td>
+                <td class="col-2"><a class="text-dark" data-toggle='tooltip' data-offset="0 15" data-placement='top' title="Email" href="mailto:sohailahmedkhan173@gmail.com" target="_blank"><i class="fa fa-solid fa-envelope fa-2x"></i></a></td>
               </tr>
-              <tr class="d-flex">
-                <td class="col-2"><i class="fa fa-lg fa-calendar-plus"></i></td>
-                <td class="col-10"><a href="https://calendly.com" target="_blank">Appointment</a><br><small
-                    class="text-muted">30 min each</small></td>
-              </tr>
+              
             </tbody>
           </table>
 
@@ -106,16 +106,14 @@
           <p class="position-title mt-2 mb-1">PhD Candidate</p>
           <p class="position-title mt-0 mb-4">SFI-MediaFutures, University of Bergen</p>
 
-          <p>Jane Smith is the {{title}} for the {{organization}}. There she {{does things}}. She is particularly
-            focused on {{various activities}}.</p>
+          <p>I am a PhD candidate at the Department of Information Science and Media Studies, University of Bergen, Norway. 
+            My research interests lie in the areas of Computer Vision, Deep Learning and Multimedia Forensics. 
+          </p>
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum
-            facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis
-            molestias eaque.</p>
-
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem nostrum sunt hic, facilis nihil earum
-            facere magnam laboriosam deleniti esse veniam explicabo architecto. Fuga quod consequuntur ducimus omnis
-            molestias eaque.</p>
+          <p>I previously worked as a Research Assistant under the supervision of Dr. Hang Dai, Assistant Professor, Computer Vision department, Mohamed bin Zayed University of Artifical Intelligence, Abu Dhabi, UAE. 
+            My research was focused on Deepfake Media Detection. 
+            Prior to that, I worked as a research intern at CYENS Centre of Excellence, Nicosia, Cyprus under the supervision of Dr. Alessandro Artusi.
+          </p>
 
 
           <!-- ------------------------------------------------------------------------>
@@ -146,7 +144,6 @@
           <!-- Delete this section above if you don't want a read more section -------->
           <!-- ------------------------------------------------------------------------>
 
-
           <h3><span>Education</span></h3>
 
           <ul id="education" class="list-group">
@@ -167,7 +164,7 @@
             </li> -->
           </ul>
 
-          <div class="alert alert-primary mt-4" role="alert">
+          <!-- <div class="alert alert-primary mt-4" role="alert">
             <h5>Download this template</h5>
             <p>This template is completely free. Download and use any or all of it as you see fit. No attribution to me
               is necessary, though <a href="mailto:rharriso@nd.edu">I'd love to know</a> if you're using it!</p>
@@ -190,7 +187,7 @@
               <li><a href="https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer"
                   target="_blank">Live Server for VS Code</a></li>
             </ul>
-          </div>
+          </div> -->
 
         </div>
         <!-- col-sm-8 -->
