--- a/research.html
+++ b/research.html
@@ -43,6 +43,7 @@
 
   <!-- Main local styles -->
   <link rel="stylesheet" href="css/main.css">
+  
 
   <title>Jane Smith, PhD</title>
 
@@ -82,13 +83,23 @@
 
         <h4>Journal Articles</h4>
 
-        <ul class="journal-articles">
-          <li>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a>
-          </li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-          <li>Lastname, X. (1999). Article title. <em>Journal Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</li>
-        </ul>
+        <div class="journal-entry">
+          <img src="https://sohailahmedkhan.github.io/images/clipping.png" alt="Thumbnail" style="width: 300px; height: auto;">
+          <!-- <span>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a></span> -->
+          <div>
+            <h4>CLIPping the Deception:</h4>
+            <p>Lastname, X. (1999). Conference paper title. <em>Conference Proceedings Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</p>
+            <p>Lastname, X. (1999). Conference paper title. <em>Conference Proceedings Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</p>
+          </div>
+        </div>
+        <div class="journal-entry">
+          <img src="https://sohailahmedkhan.github.io/images/clipping.png" alt="Thumbnail" style="width: 300px; height: auto;">
+          <span>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a></span>
+        </div>
+        <div class="journal-entry">
+          <img src="https://sohailahmedkhan.github.io/images/clipping.png" alt="Thumbnail" style="width: 300px; height: auto;">
+          <span>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a></span>
+        </div>
 
         <h4>Conference Papers</h4>
 
