--- a/research.html
+++ b/research.html
@@ -87,9 +87,9 @@
           <img src="https://sohailahmedkhan.github.io/images/clipping.png" alt="Thumbnail" style="width: 300px; height: auto;">
           <!-- <span>Smith, J. (2020). Title. <em>Journal</em>, 99. <a class="urls" href="">https://hp.com</a></span> -->
           <div>
-            <h4>CLIPping the Deception:</h4>
-            <p>Lastname, X. (1999). Conference paper title. <em>Conference Proceedings Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</p>
-            <p>Lastname, X. (1999). Conference paper title. <em>Conference Proceedings Title, 33</em>(5), 100-110. doi:10.1099/1525.1999.12</p>
+            <h4 style="font-weight: bold;">CLIPping the Deception: Adapting Vision-Language Models for Universal Deepfake Detection</h4>
+            <p><strong>Sohail Ahmed Khan</strong>, Duc-Tien Dang-Nguyen</p>
+            <p style="margin-top: -20px;">ACM International Conference on Multimedia Retrieval (ICMR), 2024.</p>
           </div>
         </div>
         <div class="journal-entry">
