--- a/acknowledge.html
+++ b/acknowledge.html
@@ -2,8 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <p><em>I acknowledge my presence on the traditional homelands of Native peoples including the {tribes}, who have been using this
-            land for education for hundreds of years, and continue to do so.</em></p>
+        <p><em>I acknowledge</em></p>
       </div>
     </div>
   </div>
