--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
           <li><a class="text-light" data-toggle='tooltip' data-offset="0 15" data-placement='top' title="Google Scholar" href="" target="_blank"><i class="fab fa-google fa-2x"></i></a></li>
         </ul>
 
-        <p class="text-center text-light mt-3">&copy; <span id="footer-year"></span> &nbsp;Jane Smith</p>
+        <p class="text-center text-light mt-3">&copy; <span id="footer-year"></span> &nbsp;Sohail Khan</p>
       </div>
     </div>
   </div>
