--- a/index.html
+++ b/index.html
@@ -50,6 +50,48 @@
 
     <title>Sohail A. Khan, PhD</title>
 
+    <style>
+      body {
+          font-family: Arial, sans-serif;
+      }
+      .mainblock-section {
+          max-width: 800px;
+          margin: auto;
+      }
+      .mainblock {
+            display: flex;
+            align-items: flex-start;
+            gap: 15px;
+            margin-bottom: 10px;
+            /* border-bottom: 1px solid #ccc; */
+            padding-bottom: 15px;
+        }
+
+      .mainblock img {
+          width: 160px;
+          height: auto;
+          object-fit: contain;
+          margin-right: 20px;
+      }
+      .mainblock-content {
+          flex: 1;
+      }
+      .mainblock-title {
+          font-size: 18px;
+          font-weight: bold;
+          margin: 0;
+      }
+      .mainblock-role {
+          font-style: italic;
+          margin: 5px 0;
+      }
+      .certificate {
+          color: #000;
+          font-weight: bold;
+          text-decoration: none;
+      }
+  </style>
+
   </head>
 
   <body id="top">
@@ -64,15 +106,15 @@
         <div class="col-sm-4">
           <div class="text-center">
             <img id="my-photo" src="img/sak1.jpg" class="rounded img-fluid shadow-sm" width="100%"
-              alt="Image of Jane Smith">
+              alt="Image of Sohail">
           </div>
 
           <table class="table mt-4" id="contact-table">
             <tbody>
               <tr class="d-flex">
-                <td class="col-2"><i class="fa fa-fw fa-lg fa-home"></i></td>
-                <td class="col-10">SFI-MediaFutures,<br>
-                  Lars Hilles Gate 30,<br>
+                <td class="col-2"><i class="fa fa-fw fa-home" style="font-size: 1.8em; margin-top: 8px; color: rgb(24, 24, 24);"></i></td>
+                <td class="col-10">SFI-MediaFutures,
+                  Lars Hilles Gate 30,
                   Bergen, Norway<br>
                   <!-- <span class="pointer"><a class="bright-blue" role="button" data-toggle="modal"
                       data-target="#modal-map-to-office"><i class="fa fa-map-marker-alt mr-2"></i>Map</a></span> -->
@@ -118,7 +160,7 @@
 
           <!-- ------------------------------------------------------------------------>
           <!-- Delete this section below if you don't want a read more section -------->
-          <div id="read-more">
+          <!-- <div id="read-more">
 
             <p>Ancillary info here.</p>
 
@@ -140,29 +182,74 @@
 
           </div>
 
-          <span class="badge badge-primary pointer" id="badge-more">More</span>
+          <span class="badge badge-primary pointer" id="badge-more">More</span> -->
           <!-- Delete this section above if you don't want a read more section -------->
           <!-- ------------------------------------------------------------------------>
 
-          <h3><span>Education</span></h3>
+          <h3><span>Experience</span></h3>
+            <div class="mainblock-section">
+                
+                <div class="mainblock" style="margin-top: 40px;">
+                    <img src="img/wolftech.png" alt="Wolftech Logo">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">Wolftech Broadcast Solutions AS, Bergen, Norway</p>
+                        <p class="mainblock-role">Research Intern</p>
+                        <p>Sept 2023 - Oct 2023</p>
+                    </div>
+                </div>
 
-          <ul id="education" class="list-group">
-            <li class="list-group-item">
-              <p><strong>PhD, Computational Visual Content Verification</strong><br>
-                <span class="university">University of Bergen, Norway</span>
-              </p>
-            </li>
-            <li class="list-group-item">
-              <p><strong>MSc, Cybersecurity and Artificial Intelligence</strong><br>
-                <span class="university">University of Sheffield, United Kingdom</span>
-              </p>
-            </li>
-            <!-- <li class="list-group-item">
-              <p><strong>BA, Field (Majors)</strong><br>
-                <span class="university">James Trickington University</span>
-              </p>
-            </li> -->
-          </ul>
+                <div class="mainblock">
+                    <img src="img/faktisk.png" alt="Faktisk Logo">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">Faktisk Verifiserbar, Oslo, Norway</p>
+                        <p class="mainblock-role">Research Intern</p>
+                        <p>Oct 2022 - Dec 2022</p>
+                    </div>
+                </div>
+
+                <div class="mainblock">
+                    <img src="img/mbzuai.jpg" alt="MBZUAI Logo" style="height: 120px;">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">Computer Vision Lab, Mohamed bin Zayed University of Artificial Intelligence, Abu Dhabi, UAE</p>
+                        <p class="mainblock-role">Research Assistant</p>
+                        <p>Dec 2020 - May 2021 <a href="images/cert_mbzuai.pdf" class="certificate">[Certificate]</a></p>
+                    </div>
+                </div>
+
+                <div class="mainblock">
+                    <img src="img/cyens.png" alt="CYENS Logo">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">DeepCamera MRG, CYENS Centre of Excellence, Nicosia, Cyprus</p>
+                        <p class="mainblock-role">Research Assistant (Remote)</p>
+                        <p>Sept 2020 - Dec 2020 <a href="images/cert_cyens.pdf" class="certificate">[Certificate]</a></p>
+                    </div>
+                </div>
+
+            </div>
+
+            <h3><span>Education</span></h3>
+            <div class="mainblock-section">
+                
+                <div class="mainblock" style="margin-top: 40px;">
+                    <img src="img/bergen.png" alt="UiB Logo" style="height: 90px;">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">University of Bergen, Norway</p>
+                        <p class="mainblock-role">PhD in Computational Visual Content Verification</p>
+                        <p>Oct 2021 - Aug 2025</p>
+                    </div>
+                </div>
+
+                <div class="mainblock">
+                    <img src="img/su.jpg" alt="SU Logo" style="height: 90px;">
+                    <div class="mainblock-content">
+                        <p class="mainblock-title">The University of Sheffield, United Kingdom</p>
+                        <p class="mainblock-role">MSc in Cybersecurity and Artificial Intelligence</p>
+                        <p>Sept 2018 - Nov 2019</p>
+                    </div>
+                </div>
+
+            </div>
+
 
           <!-- <div class="alert alert-primary mt-4" role="alert">
             <h5>Download this template</h5>
