--- a/page-navbar.html
+++ b/page-navbar.html
@@ -1,7 +1,7 @@
 <nav id="page-navbar" class="navbar navbar-expand-md bg-navbar navbar-dark">
   <div class="container">
   <!-- <div class="container"> -->
-    <a class="navbar-brand pl-2" href="index.html">Jane Smith</a>
+    <a class="navbar-brand pl-2" href="index.html">Sohail Khan</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-body" aria-controls="navbar-body" aria-expanded="false" aria-label="Toggle navigation">
       <!-- <span class="navbar-toggler-icon"></span> -->
       <i class="fa fa-bars fa-fw white"></i>
@@ -18,7 +18,7 @@
           <a class="nav-link" href="teaching.html">Teaching</a>
         </li>
         <li id="vitae" class="nav-item text-white mr-2">
-          <a class="nav-link" href="vitae.html">Vitae</a>
+          <a class="nav-link" href="vitae.html">CV</a>
         </li>
         <li id="projects" class="nav-item text-white mr-2">
           <a class="nav-link" href="projects.html">Projects</a>
